/*
 * File:  src/main/java/net/ukrcom/onlinemanager/radiusData.java
 */
package net.ukrcom.onlinemanagerrest;

import com.fasterxml.jackson.annotation.JsonProperty;
import java.io.IOException;
import java.sql.Connection;
import java.sql.DriverManager;
import java.sql.PreparedStatement;
import java.sql.ResultSet;
import java.sql.SQLException;
import java.sql.Statement;
import java.util.ArrayList;
import java.util.List;
import java.util.concurrent.Semaphore;

/**
 * @author olden
 */
public class RadiusData {

    private static volatile RadiusData instance;

    // Семафор, ініціалізований 3 дозволами, дозволяє лише 3 одночасних доступів
    private static final Semaphore semaphore = new Semaphore(3);

    protected String serverName;
    protected String databaseName;
    protected String username;
    protected String password;
    protected Connection con;
    protected Statement statement;
    protected jConfig config;

    private RadiusData() throws SQLException {
        init();
    }

    public static RadiusData getInstance() throws SQLException {
        RadiusData localInstance = RadiusData.instance;
        if (localInstance == null) {
            synchronized (RadiusData.class) {
                localInstance = RadiusData.instance;
                if (localInstance == null) {
                    RadiusData.instance = localInstance = new RadiusData();
                }
            }
        }
        return localInstance;
    }

    private void init() throws SQLException {
        try {
            this.config = new jConfigSerializing().load();
            this.serverName = this.config.getServerName();
            this.databaseName = this.config.getDatabaseName();
            this.username = this.config.getUsername();
            this.password = this.config.getPassword();
        } catch (IOException | ClassNotFoundException ex) {
            Helpers.logger.error(ex.toString());
        }

        this.con = DriverManager.getConnection(
                "jdbc:mysql://" + serverName + "/" + databaseName,
                username, password);

        this.statement = con.createStatement();
    }

    public void reinit() throws SQLException {
        closeConnections();
        init();
    }

    public void closeConnections() throws SQLException {
        if (statement != null && !statement.isClosed()) {
            statement.close();
        }
        if (con != null && !con.isClosed()) {
            con.close();
        }
        con = null;
        statement = null;
    }

    // ====================== ОСНОВНИЙ ЗАПИТ ======================
    /**
     *
     * @param days
     * @param onlineOnly
     * @param selectedIndex
     * @param customerFilter
     * @param usernameFilter
     * @return
     * @throws SQLException
     */
    public List<SessionRow> getData(int days, boolean onlineOnly,
            int selectedIndex, String customerFilter, String usernameFilter)
            throws SQLException {

        if (con == null || con.isClosed()) {
            reinit();
        }

        List<SessionRow> data = new ArrayList<>();

        try {

            // Acquire a permit. Blocks if none are available.
            semaphore.acquire();

            String sql = """
                SELECT
                    radacct.radacctid,
                    radacct.username,
                    SUBSTR(radacct.username, LOCATE('@', radacct.username) + 1) AS router,
                    acctsessionid AS sessionid,
                    acctstarttime,
                    acctupdatetime,
                    acctstoptime,
                    framedipaddress,
                    dt,
                    customername,
                    location
                FROM radacct
                LEFT JOIN radacct_customers_link a ON a.radacctid = radacct.radacctid
                LEFT JOIN customers b ON b.id = a.customerid
                WHERE radacct.username LIKE 'dhcp_%'
            """;

            if (onlineOnly) {
                sql += " AND (acctstoptime IS NULL AND radacct.radacctid >= ?) ";
            } else {
                sql += " AND (acctstoptime IS NULL OR DATE_SUB(CURDATE(), INTERVAL ? DAY) <= acctstarttime) ";
            }

            sql += " AND (radacct.username LIKE ? OR framedipaddress"
                    + (selectedIndex == 0 ? " LIKE " : "=") + "?) ";

            if (customerFilter.isEmpty()) {
                sql += " AND (customername IS NULL OR customername LIKE ?) ";
            } else {
                sql += " AND (customername IS NOT NULL AND customername LIKE ?) ";
            }

            sql += " ORDER BY acctstarttime, acctupdatetime, acctstoptime, router, username";

            try (PreparedStatement ps = con.prepareStatement(sql)) {
                int p = 1;
                ps.setInt(p++, onlineOnly ? 0 : days);

                if (usernameFilter.isEmpty()) {
                    ps.setString(p++, "%");
                    ps.setString(p++, "%");
                } else {
                    ps.setString(p++, "%" + usernameFilter + "%");
                    ps.setString(p++, selectedIndex == 0 ? "%" + usernameFilter + "%" : usernameFilter);
                }

                ps.setString(p, customerFilter.isEmpty() ? "%" : "%" + customerFilter + "%");

                printPreparedSql(ps);   // ← один рядок

                try (ResultSet rs = ps.executeQuery()) {
                    while (rs.next()) {
                        data.add(new SessionRow(
                                rs.getLong("radacctid"),
                                rs.getString("username"),
                                rs.getString("router"),
                                rs.getString("sessionid"),
                                rs.getString("acctstarttime"),
                                rs.getString("acctupdatetime"),
                                rs.getString("acctstoptime"),
                                rs.getString("framedipaddress"),
                                rs.getString("dt"),
                                rs.getString("customername"),
                                rs.getString("location")
                        ));
                    }
                }
            }
        } catch (InterruptedException ex) {
            Thread.currentThread().interrupt();
        } finally {
            // Release the permit, making it available for another thread
            semaphore.release();
        }
        return data;
    }

    // ====================== ДУБЛІКАТИ ======================
    public List<DuplicateDataRow> getDuplicateData() throws
            SQLException {

        if (con == null || con.isClosed()) {
            reinit();
        }

        List<DuplicateDataRow> data = new ArrayList<>();

        try {

            // Acquire a permit. Blocks if none are available.
            semaphore.acquire();

            String sql = """
                SELECT username, COUNT(*) AS count
                FROM radacct
                WHERE username LIKE 'dhcp_%' AND acctstoptime IS NULL
                GROUP BY username
                ORDER BY count DESC, username
            """;

            printSql(sql);

            try (ResultSet rs = statement.executeQuery(sql)) {
                while (rs.next()) {
                    try {
                        data.add(new DuplicateDataRow(
                                rs.getString("username"),
                                rs.getInt("count")
                        ));
                    } catch (IllegalArgumentException ex) {
                        Helpers.logger.debug("Error add DuplicateSessionRow to data: " + ex.toString());
                    }
                }
            }

        } catch (InterruptedException ex) {
            Thread.currentThread().interrupt();
        } finally {
            // Release the permit, making it available for another thread
            semaphore.release();
        }
        return data;
    }

    // ====================== ДЕТАЛІ ДУБЛІКАТІВ ======================
    public List<DuplicateSessionRow> getDuplicateSessions(String username) throws
            SQLException {

        if (con == null || con.isClosed()) {
            reinit();
        }

        List<DuplicateSessionRow> data = new ArrayList<>();

        try {

            // Acquire a permit. Blocks if none are available.
            semaphore.acquire();

            String sql = """
                SELECT radacctid, framedipaddress, acctstarttime, acctupdatetime
                FROM radacct
                WHERE username = ? AND acctstoptime IS NULL
            """;

            try (PreparedStatement ps = con.prepareStatement(sql)) {
                ps.setString(1, username);
                printPreparedSql(ps);

                try (ResultSet rs = ps.executeQuery()) {
                    while (rs.next()) {
                        data.add(new DuplicateSessionRow(
                                rs.getLong("radacctid"),
                                rs.getString("framedipaddress"),
                                rs.getString("acctstarttime"),
                                rs.getString("acctupdatetime")
                        ));
                    }
                }
            }
        } catch (InterruptedException ex) {
            Thread.currentThread().interrupt();
        } finally {
            // Release the permit, making it available for another thread
            semaphore.release();
        }
        return data;
    }

    // ====================== КАНДИДАТ НА ЗАКРИТТЯ ======================
    public List<AcctStopTimeCandidate> getAcctStopTimeCandidate(String startTime, String username, String ip)
            throws SQLException {

        if (con == null || con.isClosed()) {
            reinit();
        }

        List<AcctStopTimeCandidate> data = new ArrayList<>();

        try {

            // Acquire a permit. Blocks if none are available.
            semaphore.acquire();

            String sql = """
                (SELECT DATE_SUB(acctstarttime, INTERVAL 1 SECOND) AS acctstoptime_candidate
                FROM radacct
                WHERE username = ? AND acctstarttime > ?
                ORDER BY acctstarttime, acctupdatetime, acctstoptime LIMIT 1)
                UNION
                (SELECT DATE_SUB(acctstarttime, INTERVAL 1 SECOND) AS acctstoptime_candidate
                FROM radacct
                WHERE framedipaddress = ? AND acctstarttime > ?
                ORDER BY acctstarttime, acctupdatetime, acctstoptime LIMIT 1)
                ORDER BY acctstoptime_candidate LIMIT 1
            """;

            try (PreparedStatement ps = con.prepareStatement(sql)) {
                ps.setString(1, username);
                ps.setString(2, startTime);
                ps.setString(3, ip);
                ps.setString(4, startTime);

                printPreparedSql(ps);

                try (ResultSet rs = ps.executeQuery()) {
                    while (rs.next()) {
                        data.add(new AcctStopTimeCandidate(
                                startTime,
                                rs.getString("acctstoptime_candidate")
                        ));
                    }
                }
            }
        } catch (InterruptedException ex) {
            Thread.currentThread().interrupt();
        } finally {
            // Release the permit, making it available for another thread
            semaphore.release();
        }
        return data;
    }

    public boolean correctionAcctStopTime(Long id, String stopTime) throws
            SQLException {

        boolean retval = false;
        if (con == null || con.isClosed()) {
            reinit();
        }

        try {

            // Acquire a permit. Blocks if none are available.
            semaphore.acquire();

            String sql = "UPDATE radacct SET acctstoptime = ? WHERE radacctid = ?";

            try (PreparedStatement ps = con.prepareStatement(sql)) {
                ps.setString(1, stopTime);
                ps.setLong(2, id);
                printPreparedSql(ps);
                ps.executeUpdate();
                retval = true;
            }
        } catch (InterruptedException ex) {
            Thread.currentThread().interrupt();
        } finally {
            // Release the permit, making it available for another thread
            semaphore.release();
        }
        return retval;
    }

    private void printPreparedSql(PreparedStatement ps) {
        printSql(ps
                .toString()
                .replaceAll("^[^:]+: ", "")
        );
    }

    private void printSql(String sql) {
        Helpers.logger.info(
                sql.replaceAll("\\s+", " ").trim()
        );
    }

    public record SessionRow(
            long radacctid,
            String username,
            String router,
            String sessionid,
            String acctstarttime,
            String acctupdatetime,
            String acctstoptime,
            String framedipaddress,
            String dt,
            String customername,
            String location
            ) {
        // Можна додати обчислювані поля або валідацію, якщо треба

        public boolean isOnline() {
            return acctstoptime == null || acctstoptime.isBlank();
        }

        public String getDisplayName() {
            return customername != null && !customername.isBlank() ? customername : username;
        }
    }

    public record DuplicateDataRow(
            String username,
            int count
            ) {

        public DuplicateDataRow {
            if (count <= 1) {
                throw new IllegalArgumentException("count must be > 1");
            }
            if (username == null || username.isBlank()) {
                throw new IllegalArgumentException("username required");
            }
        }
    }

    public record DuplicateSessionRow(
            long radacctid,
            String framedipaddress,
            String acctstarttime,
            String acctupdatetime
            ) {

    }

    public record AcctStopTimeCandidate(
            String acctstarttime,
            @JsonProperty("acctstoptime") String acctstoptime_candidate) {

    }
}

/*
CREATE USER 'radsel'@'94.125.120.13' IDENTIFIED BY 'YmE0OTA0MDBiZTVjZDUzMWE4Mjc2ZTM5NTYyYTZlYzNlY2Y1Y2IzYWQ5N2Q4';
GRANT SELECT,UPDATE ON radius.* TO 'radsel'@'94.125.120.13';
FLUSH PRIVILEGES;
 */
