```plantuml
[plantuml,rest-overview.puml.png,png]
----
@startuml

class AcctStopTimeCandidate {
	{field} -acctstarttime : String
	{field} -acctstoptime_candidate : String
	{method} +acctstarttime () : String
	{method} +acctstoptime_candidate () : String
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class DuplicateDataRow {
	{field} -count : int
	{field} -username : String
	{method} +count () : int
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
	{method} +username () : String
}


class DuplicateSessionRow {
	{field} -acctstarttime : String
	{field} -acctupdatetime : String
	{field} -framedipaddress : String
	{field} -radacctid : long
	{method} +acctstarttime () : String
	{method} +acctupdatetime () : String
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +framedipaddress () : String
	{method} +hashCode () : int
	{method} +radacctid () : long
	{method} +toString () : String
}


class Hello {
	{method} +handle ( paramHttpExchange1 : HttpExchange ) : void
}


class Helpers {
	{field} {static} +logger : Logger
	{method}  {static} +checkAuth ( paramHttpExchange1 : HttpExchange ) : boolean
	{method}  {static} +extractToken ( paramString1 : String ) : String
	{method}  {static} +localLog ( paramHttpExchange1 : HttpExchange , paramString2 : String ) : void
	{method}  {static} +sendResponse ( paramHttpExchange1 : HttpExchange , paramint2 : int , paramString3 : String ) : void
	{method}  {static} +sendUnifiedResponse ( paramHttpExchange1 : HttpExchange , paramint2 : int , paramString3 : String , paramObject4 : Object , paramString5 : String ) : void
}


class HtpasswdVerifier {
	{field} -htpasswdPath : Path
	{method} +authenticate ( paramString1 : String , paramString2 : String ) : boolean
	{method} -verifyPassword ( paramString1 : String , paramString2 : String ) : boolean
	{method}  {static} -verifySha1 ( paramString1 : String , paramString2 : String ) : boolean
}


class Login {
	{method} +handle ( paramHttpExchange1 : HttpExchange ) : void
}


class Logout {
	{method} +handle ( paramHttpExchange1 : HttpExchange ) : void
}


class OnlinemanagerREST {
	{method}  {static} +main ( paramString;1 : String[] ) : void
}


class ParseParams {
	{method}  {static} +getFormParams ( paramHttpExchange1 : HttpExchange ) : Map
	{method}  {static} +getQueryParams ( paramHttpExchange1 : HttpExchange ) : Map
}


class RadiusData {
	{field} #con : Connection
	{field} #databaseName : String
	{field} #password : String
	{field} {static} -semaphore : Semaphore
	{field} #serverName : String
	{field} #statement : Statement
	{field} #username : String
	{method} +closeConnections () : void
	{method} +correctionAcctStopTime ( paramLong1 : Long , paramString2 : String ) : boolean
	{method} +getAcctStopTimeCandidate ( paramString1 : String , paramString2 : String , paramString3 : String ) : List
	{method} +getData ( paramint1 : int , paramboolean2 : boolean , paramint3 : int , paramString4 : String , paramString5 : String ) : List
	{method} +getDuplicateData () : List
	{method} +getDuplicateSessions ( paramString1 : String ) : List
	{method} -init () : void
	{method} -printPreparedSql ( paramPreparedStatement1 : PreparedStatement ) : void
	{method} -printSql ( paramString1 : String ) : void
	{method} +reinit () : void
}


class SessionRow {
	{field} -acctstarttime : String
	{field} -acctstoptime : String
	{field} -acctupdatetime : String
	{field} -customername : String
	{field} -dt : String
	{field} -framedipaddress : String
	{field} -location : String
	{field} -radacctid : long
	{field} -router : String
	{field} -sessionid : String
	{field} -username : String
	{method} +acctstarttime () : String
	{method} +acctstoptime () : String
	{method} +acctupdatetime () : String
	{method} +customername () : String
	{method} +dt () : String
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +framedipaddress () : String
	{method} +getDisplayName () : String
	{method} +hashCode () : int
	{method} +isOnline () : boolean
	{method} +location () : String
	{method} +radacctid () : long
	{method} +router () : String
	{method} +sessionid () : String
	{method} +toString () : String
	{method} +username () : String
}


class TokenManager {
	{field} {static} -TOKEN_EXPIRY_MS : long
	{field} {static} -tokens : Map
	{method}  {static} +generateToken ( paramString1 : String , paramString2 : String ) : String
	{method}  {static} +invalidateToken ( paramString1 : String ) : void
	{method}  {static} +isValidToken ( paramString1 : String ) : boolean
}


class correctionAcctStopTime {
	{method} +handle ( paramHttpExchange1 : HttpExchange ) : void
}


class getAcctStopTimeCandidate {
	{method} +handle ( paramHttpExchange1 : HttpExchange ) : void
}


class getData {
	{method} +handle ( paramHttpExchange1 : HttpExchange ) : void
}


class getDuplicate {
	{method} +handle ( paramHttpExchange1 : HttpExchange ) : void
}


class getDuplicateSessions {
	{method} +handle ( paramHttpExchange1 : HttpExchange ) : void
}


class jConfig {
	{field} +databaseName : String
	{field} +password : String
	{field} +serverName : String
	{field} +username : String
}


class jConfigSerializing {
	{field} -configFile : File
	{field} +htpasswdName : String
	{field} +xmlName : String
	{method} +findFilePath ( paramString1 : String ) : Path
	{method} -getConfigFilePath () : Path
	{method} +getCurrentConfigFile () : File
	{method} +load () : jConfig
	{method} +resolveHtpasswdPath () : Path
	{method} +save ( paramjConfig1 : jConfig ) : void
}




RadiusData -->  RadiusData : instance
RadiusData -->  jConfig : config


@enduml
----
```
